public/css/node-web.scss
// Scss code goes here!
// Grey
$grey: #65656c;
$light-grey-dropdown: #969696;
$lightGrey: #f6f6f6;
$borderGrey: #d4d4d4;
$kth-blue: #007fae;
$red: #e01f28;

%row {
  display: flex;
  flex-direction: row;
  align-items: baseline;
}
%column {
  display: flex;
  flex-direction: column;
}
%react-icon-basic {
  min-width: 1em;
  min-height: 1em;
}
#kth-node {
  background: pink;
}
#app {
  width: 100%;
}

//remove all this later when i will connect kth-kip-styles
// h3 {
//   margin-top: 0;
//   margin-bottom: 15px;
// }

.word-break {
  p {
    word-break: break-word;
  }
}
div.tox.tox-tinymce {
  margin-bottom: 1rem;
}

.card.collapsible.white {
  margin-top: 0.2em;
  .card-body {
    padding: 1em 0;
    @media (min-width: 768px) {
      display: flex;
      flex-direction: row;
      span:last-of-type {
        align-self: flex-start;
        height: 100%;
        margin-left: 3em;
        span {
          margin: 0;
          padding: 0;
        }
      }
    }
  }
  & > .card-header {
    h4 {
      margin-left: -0.7em;
    }
  }
  p {
    margin-bottom: 0;
  }
  & + p {
    margin-bottom: 15px;
  }
}

//person
.person {
  margin-bottom: 0.3rem;
}
.fa,
.fas {
  font-weight: 900;
}

// h4 { // not for modal
//   margin-top: 30px;
//   margin-bottom: 15px;
// }

.kip-container,
.kursinfo-main-page {
  // .kursinfo-main-page
  padding-bottom: 20px;
  padding-top: 2em;
  width: 100%;

  .btn-primary,
  .btn-success,
  .btn-secondary,
  .btn-danger {
    ///changed
    margin-top: 1em;
    margin-bottom: 1em;
  }
}

.control-buttons {
  margin-top: 50px;
  padding: 0.5em 0;
}

//BUTTONS STYLES
.control-buttons {
  @extend %column;
  border-top: 1px solid #dee2e6;
  padding-top: 1.5em;

  @media (min-width: 768px) {
    flex-direction: row;
    margin: 0;
    width: 100%;
    .btn-cancel {
      text-align: center;
    }
  }
}

.btn-secondary {
  background-color: #f6f6f6;
}

.step-back {
  //Rebuild
  &.col-sm-4 {
    padding-left: 0;
  }
}

.step-forward,
.btn-last {
  &.col-sm-4 {
    padding-right: 0;
  }
}

.memo-content {
  padding-bottom: 12em;
  h2 {
    margin-bottom: -29px;
  }
  .title-and-info {
    margin-top: 35px; //h3 15px + 34.88px
    .btn-info-modal {
      margin-left: 20px;
    }
  }
  p,
  ul,
  span {
    &:last-of-type {
      margin-bottom: 0;
    }
  }
  ul {
    margin-top: 1em;
    padding-left: 20px;
  }
  span:first-of-type h2 {
    margin-top: 0;
  }
  .section_info + span > p {
    margin-top: 1em;
  }
  .title-and-info + p {
    font-weight: 900;
  }
}

span.section_info {
  @extend %row;
  justify-content: space-between;
  margin-bottom: 17px;
  i.shortInfo {
    margin-left: 1.25em;
  }
}
.section_info_visibility_label {
  @extend %react-icon-basic;
  margin-right: 0.63em; //10.08px
  .mandatory {
    b {
      margin-right: 1.25em;
      & + i {
        margin-left: 1.25em;
      }
    }
  }
}
.section_info_visibility_icon_v {
  @extend %react-icon-basic;
  margin: 0 1.25em 0 0; //20.8px
}
.section_info_visibility_icon {
  @extend %react-icon-basic;
  margin-right: 0.3em;
  margin-left: -20px;
  margin-top: 0.3em;
}
.section_pencil {
  @extend %react-icon-basic;
  margin-right: 0.3em;
}

.step-forward,
.btn-last,
.btn-cancel {
  text-align: end;
}

.change-view {
  text-align: end;
  vertical-align: middle;
  margin-top: 28px;
}

a.nav-link {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.page-header-wrapper {
  display: flex;
  margin: 0;
  div {
    margin-right: 1.25em;
    &:last-of-type {
      margin-right: 0;
    }
  }
}

.page-header-container {
  display: flex;
  h4 {
    margin: 0 0.3rem 0 0;
    line-height: 1.5;
    font-size: 1em;
    &:after {
      content: ':';
    }
  }
}

.no-wrap {
  white-space: nowrap;
}

.progress-title {
  margin-top: 28px;
  h2 {
    margin-bottom: 0;
    margin-top: 0;
  }
}
/* Select course offerings checkboxes and radiooxes */
div.container.First--Step--Choose--Parameters {
  padding: 0;
  form {
    //adapting for error red border
    padding-top: 0.3em;
    margin-left: -0.3em;
    .form-group {
      margin-left: 0.3em;
    }
    &.Existed--Memos {
      margin-left: -0.3em;
      .form-group {
        margin-left: 1.6em;
      }
    }
    input ~ label {
      font-weight: normal;
    }
    padding-bottom: 2em;
  }
  label + label {
    font-weight: normal;
    padding-bottom: 0.7em;
    display: block;
  }
}

.error-area {
  border: solid 1px $red !important;
  border-radius: 0.25rem;
}
.error-label {
  color: $red;
}
/* Separation lines */
.change-view {
  border-right: 2px solid $borderGrey;
}
hr.header-content-separation {
  border: 1px solid $borderGrey;
  margin-top: 0;
  padding: 0;
}

